--- a/style.css
+++ b/style.css
@@ -1,39 +1,38 @@
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
 
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: auto;
-            width: 600px;
-            justify-content: center;
-            align-items: center;
-            
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 30px;
-            justify-content: center;
-            
-        }
-        .gallery-item {
-            list-style: none;
-        }
-        .gallery-item img {
-            width: 150px;
-            height: 100px;
-            object-fit: cover;
-            cursor: pointer;
-            transition: transform 0.3s;
-        }
-        .gallery-item img:hover {
-            transform: scale(1.1);
-        }
-        .basicLightbox {
-            z-index: 1000 !important;
-            position:absolute;
-            right: 6.5%;
-            bottom: 26%;
+  .gallery-item {
+    width: 100%;
+  }
 
-        }
+  .gallery-image {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+  .basicLightbox {
+    position: fixed;
+    display: flex
+;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, .8);
+    opacity: .01;
+    transition: opacity .4sease;
+    z-index: 1000;
+    will-change: opacity;
+  }
+  
+  .basicLightbox--visible {
+    opacity: 1;
+}
